syntax = "proto3";

option csharp_namespace = "TicketSystem.User.Infrastructure.Grpc";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeactivateUser (DeactivateUserRequest) returns (DeactivateUserResponse);
  rpc FindUserByEmail (FindUserByEmailRequest) returns (FindUserByEmailResponse);
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}

message CreateUserResponse {
  string user_id = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  UserMessage user = 1;
}

message ListUsersRequest {
}

message ListUsersResponse {
  repeated UserMessage users = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
}

message UpdateUserResponse {
}

message DeactivateUserRequest {
  string user_id = 1;
}

message DeactivateUserResponse {
}

message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByEmailResponse {
  UserMessage user = 1;
}

message UserMessage {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string display_name = 5;
  string created_date = 6;
  bool is_active = 7;
}
